--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -17,6 +17,10 @@ input[type="password"] {
   border: 1px solid $primaryLight;
   line-height: 40px;
   border-radius: 4px;
+  padding: 0px 40px 0px 8px;
+  &:focus {
+    outline-color: $primaryLight;
+  }
 }
 
 button {
@@ -26,6 +30,9 @@ button {
   border-radius: 8px;
   font-size: 16px;
   border: none;
+  &:hover {
+    opacity: 0.9;
+  }
 }
 
 .login {
@@ -47,9 +54,75 @@ button {
 
     h1 {
       color: $white;
-      margin: 16px 0px 40px;
+      margin: 5px 0px 40px;
     }
   }
+
+  .form {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    padding: 40px;
+    background-color: $white;
+    border-radius: 8px;
+    align-self: center;
+    box-shadow: 0px 1px 3px -1px $black;
+
+    h2 {
+      text-align: center;
+      color: $primaryDark;
+      font-size: 20px;
+      text-transform: uppercase;
+    }
+
+    .inputWrap {
+      margin-top: 16px;
+      display: flex;
+      flex-direction: row;
+      position: relative;
+      align-items: center;
+      
+      input {
+        flex-grow: 1;
+      }
+
+      .status {
+        position: absolute;
+        right: 8px;
+        font-size: 12px
+      }
+    }
+    .submit {
+      margin-top: 30px;
+    }
+
+    .link {
+      text-align: center;
+      color: $primary;
+      margin-top: 16px;
+      cursor: pointer;
+      text-transform: lowercase;
+      &:hover {
+        opacity: 0.5;
+      }
+    }
+
+    .errorWrap {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .spinner {
+        margin-top: 30px;
+      }
+
+      .error {
+        margin-top: 30px;
+        color: $primaryLight;
+      }
+    }
+  }
+
 
   .footer {
     background-color: $primary;
