feat: ensure Login starts with submiti button disabled

--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -25,6 +25,15 @@
 
     .submit {
       margin-top: 30px;
+
+      &:disabled {
+        background-color: #CCC;
+        color: #666
+      }
+
+      &:hover {
+        opacity: 1;
+      }
     }
 
     .link {
