--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -10,40 +10,32 @@
     display: flex;
     flex-direction: column;
     width: 400px;
-    padding: 40px;
     background-color: $white;
+    padding: 40px;
     border-radius: 8px;
     align-self: center;
     box-shadow: 0px 1px 3px -1px $black;
 
     h2 {
-      text-align: center;
       color: $primaryDark;
+      text-align: center;
       font-size: 20px;
       text-transform: uppercase;
     }
 
-    .submit {
-      margin-top: 30px;
-
-      &:disabled {
-        background-color: #CCC;
-        color: #666
-      }
-
-      &:hover {
-        opacity: 1;
-      }
+    button {
+      margin-top: 32px;
     }
 
     .link {
       text-align: center;
       color: $primary;
+      text-transform: lowercase;
       margin-top: 16px;
       cursor: pointer;
-      text-transform: lowercase;
+
       &:hover {
-        opacity: 0.5;
+        text-decoration: underline;
       }
     }
   }
